syntax = "proto3";
package greet;

option java_package = "com.poc.grpc";
option java_multiple_files = true;

message Greeting{
  string first_number = 1;
  string second_number = 2;
}

message GreetingRequest{
  Greeting greeting = 1;
}

message GreetingResponse{
  string response = 1;
}

service GreetingService{
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};
}